fix: Overflow on mobile

--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -5,9 +5,9 @@
 }
 
 .prod-main-image {
+	margin-top: 1em;
 	border-radius: 1em;
-	width: 100%;
-	height: 25em;
+	max-width: 100%;
 	object-fit: contain;
 	object-position: center;
 }
@@ -15,12 +15,14 @@
 .prod-all-image {
 	margin-top: 0.5em;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	gap: 1em;
 }
 
 .all-image-image {
 	background-color: grey;
+	max-width: 100%;
 	width: 5em;
 	height: 5em;
 	border-radius: 0.3em;
